fix hero text overflow

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -4,6 +4,7 @@ max-width:var(--cMaxWidth);
 margin:auto;
 position:relative;
 height:var(--vh);
+overflow:hidden;
 }
 
 .landing-container{
@@ -59,7 +60,7 @@ z-index:2;
 pointer-events:none;
 }
 
-/* CHARACTER GLOW */
+/* CHARACTER LIGHT */
 
 .character-model::before{
 
@@ -85,6 +86,7 @@ animation:heroLight 6s ease-in-out infinite alternate;
 transform:translate(-50%,-40%) scale(1);
 opacity:.4;
 }
+
 100%{
 transform:translate(-50%,-40%) scale(1.2);
 opacity:.7;
@@ -112,30 +114,32 @@ letter-spacing:2px;
 .landing-intro h1{
 margin:0;
 letter-spacing:2px;
-font-size:20px;
+font-size:40px;
 line-height:40px;
 font-weight:600;
 font-family:"Geist",sans-serif;
-color:rgb(234, 234, 234);
+color:rgb(234,234,234);
 }
 
-/* RIGHT HERO TEXT */
+/* RIGHT TEXT */
 
 .landing-info{
 position:absolute;
-right:50%;
-transform:translateX(50%);
-bottom:40px;
+right:5%;
+top:55%;
+transform:translateY(-50%);
 z-index:5;
 display:flex;
 flex-direction:column;
+align-items:flex-start;
 gap:6px;
+max-width:600px;
 }
 
 /* SMALL TEXT */
 
 .hero-small{
-font-size:15px;
+font-size:24px;
 letter-spacing:2px;
 font-weight:300;
 color:#d22525;
@@ -146,12 +150,11 @@ margin:0;
 
 .landing-info-h2{
 
-font-size:20px;
+font-size:55px;
 font-weight:900;
 color:#d9dee1;
 letter-spacing:1px;
 font-family:"Geist",sans-serif;
-white-space:nowrap;
 
 text-shadow:
 0 0 5px #ebecec,
@@ -191,12 +194,8 @@ font-size:48px;
 line-height:50px;
 }
 
-.landing-info-h2{
-font-size:60px;
-}
-
 .hero-small{
-font-size:24px;
+font-size:28px;
 }
 
 }
@@ -216,21 +215,21 @@ transform:translateY(-50%);
 }
 
 .landing-info{
-top:51%;
-left:66%;
+top:50%;
+right:8%;
 transform:translateY(-50%);
 }
 
 }
 
-@media screen and (min-width:1800px){
+@media screen and (min-width:1600px){
 
 .landing-intro h1{
 font-size:60px;
 }
 
 .landing-info-h2{
-font-size:55px;
+font-size:65px;
 }
 
 .hero-small{
